# pptify-kit

./: ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
deploy/: create-artifacts.ps1  manifest.json
deploy/awesome-copilot/plugins/pptify/: README.md
deploy/awesome-copilot/plugins/pptify/.agent/: .env.template  copilot-instruction.md  pptify-policy.md
deploy/awesome-copilot/plugins/pptify/.agent/pptify-design/: README.md  sources.json  third-party-notices.md
deploy/awesome-copilot/plugins/pptify/.agent/pptify-design/agent-prompts/: awesome-copilot-design-agents.md
deploy/awesome-copilot/plugins/pptify/.agent/pptify-plugin/: README.md  download-external-assets.ps1
deploy/awesome-copilot/plugins/pptify/.agent/pptify-plugin/audit/: audit.py
deploy/awesome-copilot/plugins/pptify/.agent/workflows/: deck-generation.md
deploy/awesome-copilot/plugins/pptify/.github/plugin/: plugin.json
deploy/awesome-copilot/skills/pptify-context-prep/: SKILL.md
deploy/awesome-copilot/skills/pptify-context-prep/references/: design-profiles.md
deploy/awesome-copilot/skills/pptify-deck-generation/: SKILL.md
deploy/awesome-copilot/skills/pptify-quality-gates/: SKILL.md
deploy/awesome-copilot/skills/pptify-quality-gates/references/: audit-checklist.md
deploy/awesome-copilot/skills/pptify-slide-spec/: SKILL.md
deploy/awesome-copilot/skills/pptify-tooling/: SKILL.md
deploy/awesome-copilot/skills/pptify-visual-assets/: SKILL.md
pptify-cli/: README.md
pptify-core/skills/pptify-context-prep/: SKILL.md
pptify-core/skills/pptify-tooling/references/: toolkit-setup.md
(+27 files in other folders)
