[project]
name = "pptify"
version = "0.1.0"
description = "Agent-driven PPTX plugin toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"python-pptx>=1.0.2",
]

[project.optional-dependencies]
plugins = [
	"beautifulsoup4>=4.12.0",
	"icrawler>=0.6.10",
	"markitdown[docx,pdf]>=0.1.5",
	"tokenizers>=0.21.0",
	"vtracer>=0.6.15",
]
